WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27057
Missing call to FocusController::setFocused(true) when handling WM_SETFOCUS in WebView
https://bugs.webkit.org/show_bug.cgi?id=27057
Summary
Missing call to FocusController::setFocused(true) when handling WM_SETFOCUS i...
Ada Chan
Reported
2009-07-07 19:12:20 PDT
Missing call to FocusController::setFocused(true) when handling WM_SETFOCUS in WebView. This is causing regressions on windows where some text fields are focused but yet have no cursor blinking.
Attachments
Call FocusController::setFocused(true) in the case when we have no focused frame.
(1.16 KB, patch)
2009-07-07 19:21 PDT
,
Ada Chan
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ada Chan
Comment 1
2009-07-07 19:21:25 PDT
Created
attachment 32419
[details]
Call FocusController::setFocused(true) in the case when we have no focused frame.
Dave Hyatt
Comment 2
2009-07-07 19:25:36 PDT
Comment on
attachment 32419
[details]
Call FocusController::setFocused(true) in the case when we have no focused frame. r=me
Ada Chan
Comment 3
2009-07-07 19:27:20 PDT
Fixed in
r45617
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug