        Reviewed by Dave Hyatt.

Missed a call to FocusController::setFocused(true) when handling WM_SETFOCUS in WebView.
        https://bugs.webkit.org/show_bug.cgi?id=27057

        * WebView.cpp:
        (WebViewWndProc):



Canonical link: https://commits.webkit.org/37274@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45617 268f45cc-cd09-0410-ab3c-d52691b4dbfc