WebKit/win/WebView.cpp
@@ -1913,8 +1913,10 @@ static LRESULT CALLBACK WebViewWndProc(HWND hWnd, UINT message, WPARAM wParam, L
                 // child of ours (for example a plugin).
                 if (!IsChild(hWnd, reinterpret_cast<HWND>(wParam)))
                     focusController->setFocused(true);
-            } else
+            } else {
+                focusController->setFocused(true);
                 focusController->setFocusedFrame(webView->page()->mainFrame());
+            }
             break;
         }
         case WM_KILLFOCUS: {
